hphp/hack/test/typecheck/safe_abstract/new_class1.php
<?hh

<<__ConsistentConstruct>>
abstract class A {}

function example(class<A> $cls): void {
  new $cls(); // error
}
